--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^5.13.0",
     "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-node": "^8.0.1",
+    "eslint-utils": ">=1.4.1",
     "jest": "^24.1.0",
     "jest-mock-console": "^0.4.2",
     "nodemon": "^1.18.10"
